--- a/01-JS02.html
+++ b/01-JS02.html
@@ -57,3 +57,20 @@
 </script>
 </body>
 </html>
+
+
+<!-- 
+  
+1) window.document є об'єктом в JavaScript, що представляє веб-документ і надає доступ до його вмісту та структури. Це точка входу для маніпуляції з елементами сторінки.
+
+2) querySelector — це метод, який дозволяє вибрати перший елемент, що відповідає заданому CSS-селектору. Його використовують для доступу або маніпуляції з конкретними елементами DOM.
+
+3) textContent забезпечує доступ та зміну тексту в елементі, не враховуючи будь-які HTML-теги. innerHTML, в свою чергу, дозволяє отримати або змінити весь HTML-вміст елемента, включаючи теги, що дозволяє маніпулювати структурою документа.
+
+4) getElementById — це метод для вибору елемента по його унікальному ідентифікатору (ID). Він надає прямий доступ до елемента, що дозволяє з легкістю маніпулювати ним.
+
+5) getElementsByTagName("h1")[0] — це синтаксис для вибору першого елемента <h1> на сторінці. getElementsByTagName повертає HTMLCollection усіх елементів заданого тегу, а [0] вказує на перший елемент у цій колекції.
+
+6) Інші події "кліка", які можуть бути викликані браузером при кліку мишею, включають dblclick (подвійний клік), mousedown (натискання кнопки миші), mouseup (відпускання кнопки миші) та click (одиночний клік).
+
+7) Метод .remove() дозволяє безпосередньо видалити елемент з DOM. element.removeChild(child) також видаляє дочірній елемент, але вимагає спочатку вказати батьківський елемент, з якого буде видалено дочірній елемент -->
